docker-registry/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: docker-registry
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`docker-registry.mw`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: docker-registry-service
      port: 5000
